syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.qsn.api.rpc.grpc.proto.entity.common.block";

package org.qsn.protobuf;

import "qsn/entity/common/transaction/TransactionDto.proto";

message BlockHeaderVersionDto {
  int32 block = 1;
  int32 app = 2;
}

message BlockHeaderDto{
  BlockHeaderVersionDto version = 1;
  bytes blockAddress =2;
  string chainId = 3;
  int64 height = 4;
  int64 time = 5;
  int64 numTxs = 6;
  int64 totalTxs = 7;
  int64 proposerSequenceNumber = 8;
  bytes lastBlockHash = 9;
  bytes lastCommitHash = 10;
  bytes dataHash = 11;
  bytes validatorsHash = 12;
  bytes nextValidatorsHash = 13;
  bytes accountHash = 14;
  bytes contractHash = 15;
  bytes storageHash = 16;
  bytes transactionHash = 17;
  bytes transactionReceiptHash = 18;
  bytes blockRewardHash = 19;
  bytes proposerAddress = 20;
}

message BlockDataDto{
  repeated TransactionDto transactions = 1;
}

message VoteDto {
  int32 type = 1;
  int64 height = 2;
  int32 round = 3;
  bytes blockHash = 4;
  int64 timestamp = 5;
  bytes validatorAddress = 6;
  int32 validatorIndex = 7;
  bytes signature = 8;
}

message LastCommitDto {
  int64 height = 1;
  bytes blockHash = 2;
  repeated VoteDto preCommits = 3;
}

message BlockDto {
  BlockHeaderDto header = 1;
  BlockDataDto data = 2;
  LastCommitDto lastCommit = 3;
}
