syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.qsn.api.rpc.grpc.proto.entity.common.transaction";

package org.qsn.protobuf;

import "qsn/entity/common/transaction/TransactionFeeDto.proto";
import "qsn/entity/common/transaction/TransactionSignatureDto.proto";
import "qsn/entity/common/transaction/TransactionDataDto.proto";
import "qsn/entity/common/transaction/AttachmentDto.proto";

message TransactionDto{
    int32 txType = 1;
    TransactionDataDto txData = 2;
    bytes smartContractName = 3;
    bytes smartContractAction = 4;
    TransactionFeeDto fee = 5;
    bytes info = 6;
    AttachmentDto attachment = 7;
    repeated TransactionSignatureDto signatures = 8;
}